--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ matplotlib>=3.5.0
 torch>=2.0.0
 transformers>=4.36.0
 vllm
-flash-attn --no-build-isolation 
+flash-attn 
 
 # === RL ОБУЧЕНИЕ (GRPO) ===
 trl>=0.8.0
